<resources>
    <string name="app_name">Mayday</string>
    <string name="btnGiris">GİRİŞ</string>
    <string name="btnGirisYap">GİRİŞ YAP</string>
    <string name="btnKayit">KAYIT OL</string>
    <string name="btnProfil">Profil Oluştur</string>
    <string name="btnProfilTamamla">Profil Oluştur</string>
    <string name="btnCikis">Çıkış Yap</string>
    <string name="btnBilgi">BİZ KİMİZ?</string>
    <string name="alinanKullanici"></string>
    <string name="btnProfilDuzenle">PROFİL DÜZENLE</string>
    <string name="e_mail">E-mail</string>
    <string name="password"></string>
    <string name="btnNewUser"></string>
    <string name="userName">Kullanici adi</string>
    <string name="btnFireman"></string>
    <string name="btnDoctor"></string>
    <string name="btnCFriend"></string>
    <string name="btnPolice"></string>





    <string name="etKullanici">İsim-Soyisim</string>
    <string name="etTC">TC Kimlik Numarası</string>
    <string name="etIlac">Kullanılan İlaç</string>
    <string name="txtCinsiyet">  Cinsiyet</string>
    <string name="etKronik">Kronik Hastalıklar</string>
    <string name="etGecirilen">Geçirilen Hastalıklar</string>
    <string name="etYakinadi">Yakın adı</string>
    <string name="etYakinNum">Yakın kişinin iletişim bilgisi</string>
    <string name="etNumara">İletişim Numarası</string>

    <string name="ListViewKan">Kan Grubu</string>

    <string name="radioBtnKadin">Kadın</string>
    <string name="radioBtnErkek">Erkek</string>
    <string name="radioGroupCinsiyet">Kan</string>
    <string name="alinanCinsiyet">Kan</string>
    <string name="spinnerKan">Kan</string>
    <string name="spinnerRh" />




</resources>
